Homework2/Vpc.tf
##################################################################################
# VPC
##################################################################################

resource "aws_vpc" "assignment_vpc" {
  cidr_block       = "10.0.0.0/16"
  instance_tenancy = "default"

  tags = {
    Name = "${var.purpose_tag}_vpc"
  }
}
